Fix: close button in hovers overlapping text (#2003)

--- a/shared/src/hover/HoverOverlay.scss
+++ b/shared/src/hover/HoverOverlay.scss
@@ -19,7 +19,7 @@
         right: 0;
         padding: 0.25rem;
         border-radius: 0;
-        background: transparent;
+        background: var(--body-bg);
         z-index: 1;
         border: none;
         opacity: 0;
